<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:layout_marginBottom="35dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="7"
            android:columnCount="2">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="150dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:src="@drawable/baseline_home_24"/>

            <TextView
                android:id="@+id/estateAddress"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:padding="8dp"
                android:text="@string/estate_address"
                android:textColor="@color/secondary" />
            <TextView
                android:id="@+id/estateAddressTV"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:padding="8dp"
                android:text="@string/estate_address"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/estatePrice"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:padding="8dp"
                android:text="@string/estate_price"
                android:textColor="@color/secondary" />
            <TextView
                android:id="@+id/estatePriceTV"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:padding="8dp"
                android:text="@string/estate_price"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/estateSize"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:padding="8dp"
                android:text="@string/estate_area"
                android:textColor="@color/secondary" />
            <TextView
                android:id="@+id/estateSizeTV"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:padding="8dp"
                android:text="@string/estate_area"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/estateRoomNum"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:padding="8dp"
                android:text="@string/estate_room_num"
                android:textColor="@color/secondary" />
            <TextView
                android:id="@+id/estateRoomNumTV"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:padding="8dp"
                android:text="@string/estate_room_num"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/estate_description"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:padding="8dp"
                android:scrollHorizontally="false"
                android:ellipsize="none"
                android:text="@string/estateDescription"
                android:textColor="@color/secondary" />
            <TextView
                android:id="@+id/estate_descriptionTV"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:padding="8dp"
                android:text="@string/estateDescription"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/seller_contact"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="1"
                android:scrollHorizontally="false"
                android:padding="8dp"
                android:text="@string/sellerContact"
                android:textColor="@color/secondary" />
            <TextView
                android:id="@+id/seller_contactTV"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:padding="8dp"
                android:text="@string/sellerContact"
                android:textColor="@color/secondary" />

        </GridLayout>

</androidx.cardview.widget.CardView>