<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background = "@drawable/gradient_drawable"
    tools:context=".RegisterActivity"
    tools:ignore="HardcodedText">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:hint="@string/registry"
            android:textColorHint="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"

            android:textColorHint="@color/black"
            android:foregroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:placeholderTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"
            app:boxBackgroundColor="#829475"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="#829475"

            android:textColorHint="@color/black"
            android:foregroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:placeholderTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:boxBackgroundColor="#829475"
                android:textColor="@color/black"
                android:textColorHint="@color/primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="#829475"

            android:textColorHint="@color/black"
            android:foregroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:placeholderTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:boxBackgroundColor="#829475"
                android:textColor="@color/black"
                android:textColorHint="@color/primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="#829475"

            android:textColorHint="@color/black"
            android:foregroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:placeholderTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxBackgroundColor="#829475"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="#829475"

            android:textColorHint="@color/black"
            android:foregroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:placeholderTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordconfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordConfirmation"
                app:boxBackgroundColor="#829475"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/primary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registry"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary"
            android:onClick="register"
            android:text="@string/registry"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:rippleColor="@color/secondary"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/round_arrow_back_24"
            android:layout_gravity="center"
            android:contentDescription="back"
            android:backgroundTint="@color/primary"
            android:onClick="back"
            />

    </LinearLayout>

</ScrollView>

</LinearLayout>